--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "homepage": "https://github.com/rexxars/krokkete#readme",
   "dependencies": {
+    "@sanity/client": "^2.2.6",
     "@sanity/ui": "^0.33.9",
     "next": "^10.0.8",
     "react": "^17.0.1",
